Bug 1252495 - Global Toolbar should be always visible; r=jryans

--- a/devtools/client/responsive.html/index.css
+++ b/devtools/client/responsive.html/index.css
@@ -133,13 +133,10 @@ html, body {
 
 
 #viewports {
-  /* Snap to the top of the app when there isn't enough vertical space anymore
-     to center the viewports (so we don't loose the toolbar) */
-  position: sticky;
-  top: 0;
   /* Make sure left-most viewport is visible when there's horizontal overflow.
      That is, when the horizontal space become smaller than the viewports and a
      scrollbar appears, then the first viewport will still be visible */
+  position: sticky;
   left: 0;
   /* Individual viewports are inline elements, make sure they stay on a single
      line */
@@ -431,13 +428,17 @@ html, body {
 }
 
 .device-header {
+  font-size: 11px;
   font-weight: bold;
   text-transform: capitalize;
   padding: 0 0 3px 23px;
 }
 
 .device-label {
+  font-size: 11px;
   padding-bottom: 3px;
+  display: flex;
+  align-items: center;
 }
 
 .device-input-checkbox {
